# keyframe-qwen-finetune

./: .env.example  .gitignore  README.md  conftest.py  dataset_utils.py  eval.py  examine_data.py  generate.py  generate_data.py  make_plots.py  make_preview.py  prepare_data.py  prompting.py  pyproject.toml  split_data.py  train.py  verify_model.py
data/: keyframes_all.jsonl  keyframes_train.jsonl  keyframes_val.jsonl  preview.html
docs/: README.md  architecture.md  data-generation.md  data-pipeline.md  reference.md  training-and-inference.md
outputs/: preview.html
outputs/eval/: base.jsonl  base_metrics.json  ft.jsonl  ft_metrics.json
tests/: test_cascade.py
